ec2WebServerVpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create an EC2 instance with nodeJS Web App"
Parameters:
  KeyName:
    Description: Name of the EC2 Key Pair
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Key name must exist in your AWS account


Resources:
  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      KeyName: !Ref KeyName
      ImageId: "ami-0df435f331839b2d6" # AWS Linux free tier
      InstanceType: "t2.micro" # Instance Type

      SubnetId: "subnet-014862897ec5f087e"
      AvailabilityZone: "us-east-1a"
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |       #app available on <IPaddress>:3000
           #!/bin/bash -xe
           sudo yum install -y gcc-c++ 
           sudo yum install -y nodejs
           sudo yum install git -y
           git clone https://github.com/wiesell1923/nodejs.git
           cd nodejs
           npm install bcrypt
           node app.js

  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP access
      VpcId: "vpc-0e638e55241125094"
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22  # Enable SSH access
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: 80
          ToPort: 80  # Enable HTTP access

Outputs:
  PublicIPAddress:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
